Incubation 03a, > Cleanup 01.